<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.task.example.silich.vladislav.taskwork.activity.MainActivity"
    android:background="@drawable/oblaka2"
    android:weightSum="1">

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:orientation="horizontal">

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_weight="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startCity"
        android:textColor="#070808"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/cityNameFrom"
        android:backgroundTint="#1E0B9C"
        android:hint="@string/editText_hint_city1"
        android:maxLength="20"
        android:textColor="#1E0B9C"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textCursorDrawable="@drawable/cursorbackground"
        android:textColorHint="#1E0B9C"/>
</LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endCity"
            android:textColor="#070808"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/cityNameTo"
            android:backgroundTint="#1E0B9C"
            android:hint="@string/editText_hint_city2"
            android:maxLength="20"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#1E0B9C"
            android:textCursorDrawable="@drawable/cursorbackground"
            android:textColorHint="#1E0B9C"/>
    </LinearLayout>

   </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/startDate"
                android:textColor="#070808"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#1E0B9C"
                android:backgroundTint="#1E0B9C"
                android:id="@+id/dateFrom"
                android:hint="@string/editText_hint_date1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:inputType="date"
                android:textCursorDrawable="@drawable/cursorbackground"
                android:textColorHint="#1E0B9C"/>

        </LinearLayout>


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/imageFirstCalendar"
            android:clickable="true">
        </ImageView>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/endDate"
                android:textColor="#070808"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="date"
                android:id="@+id/dateTo"
                android:backgroundTint="#1E0B9C"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#1E0B9C"
                android:hint="@string/editText_hint_date2"
                android:textCursorDrawable="@drawable/cursorbackground"
                android:textColorHint="#1E0B9C"/>


        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_my_calendar"
            android:id="@+id/imageSecondCalendar"
            android:clickable="true">

        </ImageView>
    </LinearLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sortCollection"
        android:textColor="#070808"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_marginEnd="12dp"
            android:layout_marginRight="12dp"
            android:background="@drawable/oval_button"
            android:text="@string/btnSearch" />

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:prompt="@string/sort_by"
            android:spinnerMode="dialog"
            android:theme="@style/spinnerTheme" />
    </RelativeLayout>

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1">
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:indeterminateDrawable="@drawable/spinner_ring"
        android:indeterminateOnly="true" />/>

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerView"
        android:layout_weight="1">
    </android.support.v7.widget.RecyclerView>
</FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnPrevious"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:visibility="gone"
                android:text="@string/btnPrevious" />

            <Button
                android:id="@+id/btnNext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnNext"
                android:visibility="gone"
                android:layout_weight="0"/>
        </LinearLayout>


</LinearLayout>
